Fix alignment of print button help

--- a/App/resources/less/section-print.less
+++ b/App/resources/less/section-print.less
@@ -354,7 +354,6 @@
 					&.unnamed,
 					&.named {
 						position: absolute;
-						right: -110px;
 						bottom: -142px;
 						div.stem {
 							width: 3px;
@@ -366,6 +365,12 @@
 						p.home {
 							display: none;
 						}
+					}
+					&.unnamed {
+						right: -110px;
+					}
+					&.named {
+						right: 60px;
 					}
 					&.keyboard-on {
 						position: absolute;
